--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -13,43 +13,43 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      -name: Check out
-       uses: actions/checkout@v2
+      - name: Check out
+        uses: actions/checkout
        
-     - name: Docker meta
-       id: docker_meta
-       uses: crazy-max/ghaction-docker-meta@v1
-       with:
-         images: ghcr.io/vibhuti-23/rgapi
-         tag-sha: true
-         tag-edge: false
-         tag-latest: true
+      - name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: ghcr.io/vibhuti-23/rgapi
+          tag-sha: true
+          tag-edge: false
+          tag-latest: true
          
-    - name: Set up QEMU        
-      uses: docker/setup-qemu-action@v1   
+      - name: Set up QEMU        
+        uses: docker/setup-qemu-action@v1   
       
-    - name: Set up Docker Buildx        
-      uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx        
+        uses: docker/setup-buildx-action@v1
       
-    - name: Login to GHCR
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GHCR_password }}
+      - name: Login to GHCR
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_password }}
         
-    - name: Build image
-      uses: docker/build-push-action@v2
-      with:
-        tags: ${{ steps.docker_meta,outputs.tags }}
-        file: ./Dockerfile
+      - name: Build image
+        uses: docker/build-push-action@v2
+        with:
+          tags: ${{ steps.docker_meta,outputs.tags }}
+          file: ./Dockerfile
         
-    - name: Push image
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: ${{ steps.docker_meta,outputs.tags }}
-        file: ./Dockerfile    
+      - name: Push image
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ steps.docker_meta,outputs.tags }}
+          file: ./Dockerfile    
      
         
       
