--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -14,7 +14,7 @@ jobs:
     
     steps:
       - name: Check out
-        uses: actions/checkout
+        uses: actions/checkout@v2
        
       - name: Docker meta
         id: docker_meta
