--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build image
         uses: docker/build-push-action@v2
         with:
-          tags: ${{ steps.docker_meta,outputs.tags }}
+          tags: ${{ steps.docker_meta.outputs.tags }}
           file: ./Dockerfile
         
       - name: Push image
