--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -48,7 +48,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ steps.docker_meta,outputs.tags }}
+          tags: ${{ steps.docker_meta.outputs.tags }}
           file: ./Dockerfile    
      
         
